# livesub

./: .env.example  README.md  livesub.toml.example  pyproject.toml  server.py
static/: app.js  index.html  manifest.json  pcm-worklet.js  style.css
