[project]
name = "livecap"
version = "0.1.0"
description = "Real-time bilingual live caption tool powered by Gemini Live"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "google-genai>=0.8",
    "python-dotenv>=1.0",
    "anthropic>=0.97.0",
]

[dependency-groups]
dev = [
    "piper-tts>=1.4.2",
    "playwright>=1.59.0",
    "scipy>=1.17.1",
]
